--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 spring.application.name=lab7
 
 spring.graphql.graphiql.enabled=true
+
+# ----------------------------------
+# Datasource Connection Configuration
+# ----------------------------------
+spring.datasource.url=jdbc:mysql://localhost:3307/product_db
+spring.datasource.username=root
+spring.datasource.password=0001
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ----------------------------------
+# JPA (Hibernate) Configuration
+# ----------------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
